@@ -60,6 +60,8 @@ public:
   bool init_pythoninterface(); // init python interface
   bool update(); // updates everything to catch changes in the entities
   bool reset(); // delete all data and init new
+  bool read_cub(); // read core data from cub
+  bool save_cub(); // save core data to cub
   std::string autocleanup(); // cleans up the core data
   std::string print_data();
   bool export_to_csv(std::string path_and_name, std::vector<std::string> header, std::vector<std::vector<double>> data,bool overwrite); // exports the data to a .csv file, with the header
