@@ -60,3 +60,5 @@
 2024-09-08 working on job monitor dat tab
 2024-09-09 csv export for dat
 2024-09-09 working on dat plot
+2024-09-27 working on reading/saving ccx core data into cub
+
